release v2.82.0