@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.oracle.oci.sdk</groupId>
   <artifactId>oci-java-sdk</artifactId>
-  <version>3.61.0</version>
+  <version>2.82.0</version>
   <packaging>pom</packaging>
   <name>Oracle Cloud Infrastructure SDK</name>
   <description>This project contains the SDK used for Oracle Cloud Infrastructure</description>
@@ -34,48 +34,65 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <javax.annotation.version>1.3.2</javax.annotation.version>
     <jackson.version>2.17.1</jackson.version>
     <jackson.databind.version>2.17.1</jackson.databind.version>
     <jersey.version>2.35</jersey.version>
-    <apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
     <apache-httpcomponents.httpclient.version>4.5.13</apache-httpcomponents.httpclient.version>
     <apache-httpcomponents.httpcore.version>4.4.13</apache-httpcomponents.httpcore.version>
+    <guava.version>33.3.0-jre</guava.version>
     <junit.version>4.13.2</junit.version>
+    <jsr305.version>3.0.2</jsr305.version>
     <slf4j.version>1.7.33</slf4j.version>
-    <javax.annotation.version>1.3.2</javax.annotation.version>
-    <jakarta9.annotations.version>2.1.1</jakarta9.annotations.version>
+    <jakarta.annotations.version>1.3.5</jakarta.annotations.version>
     <jakarta.ws.rs-api.version>2.1.6</jakarta.ws.rs-api.version>
     <!-- Update resilience4jVersion and io.vavr.version together -->
     <resilience4jVersion>1.7.1</resilience4jVersion>
     <io.vavr.version>0.10.4</io.vavr.version>
     <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
-    <mockito.version>2.18.0</mockito.version>
-    <powermock.version>2.0.2</powermock.version>
+    <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+    <maven-surefire-plugin.argLine />
+    <mockito.version>1.10.19</mockito.version>
+    <powermock.version>1.7.4</powermock.version>
     <hk2.version>2.6.1</hk2.version>
     <net.jodah.failsafe.version>0.9.2</net.jodah.failsafe.version>
     <hamcrest.core.version>1.3</hamcrest.core.version>
     <hamcrest.junit.version>2.0.0.0</hamcrest.junit.version>
-    <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
     <excluded.testcases>**/*IntegrationAutoTest.java</excluded.testcases>
     <dev.profile.skip.javadoc>true</dev.profile.skip.javadoc>
     <exec.skip>true</exec.skip>
     <exec.mainClass>com.acme.Undefined</exec.mainClass>
-    <oci.codegen.version>2.119</oci.codegen.version>
   </properties>
   <profiles>
-    <profile>
-      <id>ziponly</id>
-      <modules>
-        <module>bmc-dist</module>
-      </modules>
-    </profile>
     <profile>
       <id>dev</id>
       <build>
         <plugins>
           <plugin>
+            <groupId>org.commonjava.maven.plugins</groupId>
+            <artifactId>directory-maven-plugin</artifactId>
+            <version>0.1</version>
+            <executions>
+              <execution>
+                <id>directories</id>
+                <goals>
+                  <goal>directory-of</goal>
+                </goals>
+                <phase>initialize</phase>
+                <configuration>
+                  <property>ocijavasdk.basedir</property>
+                  <project>
+                    <groupId>com.oracle.oci.sdk</groupId>
+                    <artifactId>oci-java-sdk</artifactId>
+                  </project>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.6.0</version>
             <executions>
               <execution>
                 <id>timestamp-property</id>
@@ -125,7 +142,6 @@
                   <style>AOSP</style>
                   <filterModified>true</filterModified>
                   <skip>false</skip>
-                  <filterModified>false</filterModified>
                 </configuration>
                 <goals>
                   <goal>format</goal>
@@ -161,7 +177,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.7.0</version>
+            <version>3.11.2</version>
             <configuration>
               <skip>${dev.profile.skip.javadoc}</skip>
             </configuration>
@@ -204,7 +220,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.7.0</version>
+            <version>3.11.2</version>
             <configuration>
               <skip>true</skip>
             </configuration>
@@ -227,15 +243,7 @@
       <properties>
         <argLine>
           --add-opens=java.base/java.lang=ALL-UNNAMED
-          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
           --add-opens=java.base/java.util=ALL-UNNAMED
-          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-          --add-opens=java.base/java.io=ALL-UNNAMED
-          --add-opens=java.base/java.time=ALL-UNNAMED
-          --add-opens=java.base/java.util.regex=ALL-UNNAMED
-          --add-opens=java.base/java.util.stream=ALL-UNNAMED
-          --add-opens=java.base/java.text=ALL-UNNAMED
-          --add-opens=java.base/java.security=ALL-UNNAMED
           --add-opens=java.base/java.net=ALL-UNNAMED
           --add-opens=java.base/java.nio.channels=ALL-UNNAMED
         </argLine>
@@ -245,7 +253,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.7.0</version>
+            <version>3.11.2</version>
             <configuration>
               <skip>true</skip>
             </configuration>
@@ -253,7 +261,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.19.1</version>
+            <version>${maven-surefire-plugin.version}</version>
             <configuration>
               <excludes>
                 <exclude>**/ConfigFileDelegationTokenUtilsTest.java</exclude>
@@ -266,6 +274,15 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>jdk-8-only</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+      <properties>
+        <maven-surefire-plugin.argLine />
+      </properties>
     </profile>
   </profiles>
   <build>
@@ -304,19 +321,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.1.2</version>
-          <executions>
-            <execution>
-              <id>check-dependencies</id>
-              <goals>
-                <goal>analyze-only</goal>
-              </goals>
-              <phase>verify</phase>
-              <configuration>
-                <failOnWarning>false</failOnWarning>
-              </configuration>
-            </execution>
-          </executions>
+          <version>2.10</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -326,7 +331,7 @@
         <plugin>
           <groupId>com.theoryinpractise</groupId>
           <artifactId>googleformatter-maven-plugin</artifactId>
-          <version>1.7.5</version>
+          <version>1.0.5</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -370,7 +375,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.7.0</version>
+          <version>3.11.2</version>
           <goals>
             <goal>jar</goal>
           </goals>
@@ -386,15 +391,15 @@
           <configuration>
             <!-- Exclude classes that shouldn't be exposed to end users, ex, those in 'internal' packages -->
             <excludePackageNames>*.internal.*</excludePackageNames>
-            <minmemory>2048m</minmemory>
+            <minmemory>2048</minmemory>
             <maxmemory>6144m</maxmemory>
             <doclint>none</doclint>
             <sourcepath>src/main/java</sourcepath>
             <links>
-              <link>https://jax-rs-spec.java.net/nonav/2.0-rev-a/apidocs</link>
-              <link>https://jersey.java.net/apidocs/${jersey.version}/jersey</link>
+              <link>https://javadoc.io/doc/javax.ws.rs/javax.ws.rs-api/2.0</link>
+              <link>https://eclipse-ee4j.github.io/jersey.github.io/apidocs/${jersey.version}/jersey</link>
+              <link>https://guava.dev/releases/${guava.version}/api/docs</link>
             </links>
-            <additionalJOptions>--allow-script-in-comments</additionalJOptions>
           </configuration>
         </plugin>
         <plugin>
@@ -405,28 +410,31 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
+          <version>${maven-surefire-plugin.version}</version>
           <configuration>
             <excludes>
               <exclude>${excluded.testcases}</exclude>
             </excludes>
+            <argLine>${maven-surefire-plugin.argLine}</argLine>
           </configuration>
-          <executions>
-            <execution>
-              <id>run-tests</id>
-            </execution>
-          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.surefire</groupId>
+              <artifactId>surefire-junit47</artifactId>
+              <version>2.19.1</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
           <version>3.3.0</version>
           <inherited>true</inherited>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -448,27 +456,6 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <plugin>
-        <groupId>org.commonjava.maven.plugins</groupId>
-        <artifactId>directory-maven-plugin</artifactId>
-        <version>0.1</version>
-        <executions>
-          <execution>
-            <id>directories</id>
-            <goals>
-              <goal>directory-of</goal>
-            </goals>
-            <phase>initialize</phase>
-            <configuration>
-              <property>ocijavasdk.basedir</property>
-              <project>
-                <groupId>com.oracle.oci.sdk</groupId>
-                <artifactId>oci-java-sdk</artifactId>
-              </project>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>com.googlecode.maven-download-plugin</groupId>
         <artifactId>download-maven-plugin</artifactId>
@@ -502,8 +489,60 @@
       </plugin>
     </plugins>
   </reporting>
+  <dependencies>
+    <!-- Test dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!-- Build only dependencies -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency>
+    <!-- Direct dependencies -->
+    <dependency>
+      <groupId>jakarta.ws.rs</groupId>
+      <artifactId>jakarta.ws.rs-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+  </dependencies>
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>jakarta.ws.rs</groupId>
+        <artifactId>jakarta.ws.rs-api</artifactId>
+        <version>${jakarta.ws.rs-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>${javax.annotation.version}</version>
+      </dependency>
       <dependency>
         <groupId>net.jodah</groupId>
         <artifactId>failsafe</artifactId>
@@ -513,6 +552,51 @@
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
         <version>${apache-httpcomponents.httpcore.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.hk2</groupId>
+        <artifactId>hk2-api</artifactId>
+        <version>${hk2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.hk2</groupId>
+        <artifactId>hk2-locator</artifactId>
+        <version>${hk2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.connectors</groupId>
+        <artifactId>jersey-apache-connector</artifactId>
+        <version>${jersey.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.core</groupId>
+        <artifactId>jersey-client</artifactId>
+        <version>${jersey.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.core</groupId>
+        <artifactId>jersey-common</artifactId>
+        <version>${jersey.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.inject</groupId>
+        <artifactId>jersey-hk2</artifactId>
+        <version>${jersey.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.media</groupId>
+        <artifactId>jersey-media-json-jackson</artifactId>
+        <version>${jersey.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>${jsr305.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
       </dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
@@ -586,6 +670,11 @@
         <version>${apache-httpcomponents.httpclient.version}</version>
       </dependency>
       <dependency>
+        <groupId>jakarta.annotation</groupId>
+        <artifactId>jakarta.annotation-api</artifactId>
+        <version>${jakarta.annotations.version}</version>
+      </dependency>
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
@@ -597,13 +686,13 @@
       </dependency>
       <dependency>
         <groupId>org.powermock</groupId>
-        <artifactId>powermock-api-mockito2</artifactId>
+        <artifactId>powermock-api-mockito</artifactId>
         <version>${powermock.version}</version>
       </dependency>
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-api-mockito-common</artifactId>
-        <version>1.7.4</version>
+        <version>${powermock.version}</version>
       </dependency>
       <dependency>
         <groupId>org.powermock</groupId>
@@ -625,26 +714,19 @@
         <artifactId>slf4j-simple</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
-      <dependency>
-        <groupId>javax.annotation</groupId>
-        <artifactId>javax.annotation-api</artifactId>
-        <version>${javax.annotation.version}</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
   <modules>
     <module>bmc-enforcer-rules</module>
+    <module>bmc-audit</module>
     <module>bmc-bom</module>
     <module>bmc-circuitbreaker</module>
-    <module>bmc-common-httpclient</module>
-    <module>bmc-common-httpclient-choices</module>
     <module>bmc-common</module>
-    <!-- client modules -->
-    <module>bmc-audit</module>
     <module>bmc-core</module>
     <module>bmc-database</module>
     <module>bmc-dns</module>
     <module>bmc-email</module>
+    <module>bmc-examples</module>
     <module>bmc-filestorage</module>
     <module>bmc-identity</module>
     <module>bmc-loadbalancer</module>
@@ -681,6 +763,7 @@
     <module>bmc-secrets</module>
     <module>bmc-vault</module>
     <module>bmc-bds</module>
+    <module>bmc-encryption</module>
     <module>bmc-cims</module>
     <module>bmc-datasafe</module>
     <module>bmc-mysql</module>
@@ -756,12 +839,6 @@
     <module>bmc-opensearch</module>
     <module>bmc-cloudmigrations</module>
     <module>bmc-cloudbridge</module>
-    <!-- End client modules -->
-    <module>bmc-encryption</module>
-    <module>bmc-full</module>
-    <module>bmc-shaded</module>
-    <module>bmc-examples</module>
-    <module>bmc-other-examples</module>
     <module>bmc-disasterrecovery</module>
     <module>bmc-containerinstances</module>
     <module>bmc-aidocument</module>
@@ -796,5 +873,7 @@
     <module>bmc-zpr</module>
     <module>bmc-dblm</module>
     <module>bmc-mngdmac</module>
+    <module>bmc-full</module>
+    <module>bmc-shaded</module>
   </modules>
 </project>
